Replace Stats button with Support button

--- a/web_app.html
+++ b/web_app.html
@@ -820,9 +820,9 @@
                 <div class="btn-emoji">💳</div>
                 <div>Карточки</div>
             </a>
-            <a href="#" class="btn" onclick="openStats(event)">
-                <div class="btn-emoji">📊</div>
-                <div>Статистика</div>
+            <a href="#" class="btn" onclick="openSupport(event)">
+                <div class="btn-emoji">💬</div>
+                <div>Поддержка</div>
             </a>
             <a href="#" class="btn" onclick="openReferrals(event)">
                 <div class="btn-emoji">👥</div>
