--- a/web_app.html
+++ b/web_app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!-- Quantum Nexus v2.0 -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Nexus</title>
+    <title>Quantum Nexus v2.0</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         * {
