--- a/web_app.html
+++ b/web_app.html
@@ -1381,28 +1381,32 @@
             .then(res => res.json())
             .then(data => {
                 const shop = document.getElementById('miningShop');
-                shop.innerHTML = data.shop_machines.map(m => `
-                    <div style="background:rgba(0,0,0,0.3);padding:15px;border-radius:12px;border:1px solid rgba(102,126,234,0.3);">
-                        <div style="font-weight:700;margin-bottom:8px;">${m.name}</div>
-                        <div style="font-size:12px;color:#94a3b8;margin-bottom:10px;">
-                            🪙 Hash: ${m.hash_rate}/s | 💰 Доход/ч: ${m.hash_per_hour}
-                        </div>
-                        <button onclick="buyMachine('${m.id}', ${m.price}, '${m.currency}')" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:600;">
-                            Купить за ${m.price} ${m.currency === 'coins' ? '🪙' : '💎'}
-                        </button>
-                    </div>
-                `).join('');
-                
-                const list = document.getElementById('machinesList');
-                if(data.user_machines && data.user_machines.length > 0) {
-                    list.innerHTML = data.user_machines.map(m => `
-                        <div style="background:rgba(0,0,0,0.3);padding:10px;border-radius:8px;margin-bottom:8px;">
-                            <div style="font-weight:600;">${m.name}</div>
-                            <div style="font-size:12px;color:#94a3b8;">🪙 Hash: ${m.hash_rate}/s</div>
+                if(shop) {
+                    shop.innerHTML = data.shop_machines.map(m => `
+                        <div style="background:rgba(0,0,0,0.3);padding:15px;border-radius:12px;border:1px solid rgba(102,126,234,0.3);">
+                            <div style="font-weight:700;margin-bottom:8px;">${m.name}</div>
+                            <div style="font-size:12px;color:#94a3b8;margin-bottom:10px;">
+                                🪙 Hash: ${m.hash_rate}/s | 💰 Доход/ч: ${m.hash_per_hour}
+                            </div>
+                            <button onclick="buyMachine('${m.id}', ${m.price}, '${m.currency}')" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:600;">
+                                Купить за ${m.price} ${m.currency === 'coins' ? '🪙' : '💎'}
+                            </button>
                         </div>
                     `).join('');
-                } else {
-                    list.innerHTML = '<p style="text-align:center;opacity:0.7;">У вас нет машин</p>';
+                }
+                
+                const list = document.getElementById('machinesList');
+                if(list) {
+                    if(data.user_machines && data.user_machines.length > 0) {
+                        list.innerHTML = data.user_machines.map(m => `
+                            <div style="background:rgba(0,0,0,0.3);padding:10px;border-radius:8px;margin-bottom:8px;">
+                                <div style="font-weight:600;">${m.name}</div>
+                                <div style="font-size:12px;color:#94a3b8;">🪙 Hash: ${m.hash_rate}/s</div>
+                            </div>
+                        `).join('');
+                    } else {
+                        list.innerHTML = '<p style="text-align:center;opacity:0.7;">У вас нет машин</p>';
+                    }
                 }
             });
         }
