Fix referral link generation with correct user ID

--- a/web_app.html
+++ b/web_app.html
@@ -1583,7 +1583,16 @@
             .then(data => {
                 document.getElementById('refCount').textContent = data.referrals_count || 0;
                 document.getElementById('refIncome').textContent = `${Math.floor(data.referral_income || 0)} 🪙`;
-                const refLink = `https://t.me/qanexus_bot?start=${data.referral_code}`;
+                // Get bot username from Telegram WebApp
+                let botUsername = 'QuantumNexus_bot'; // Fallback
+                if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.initDataUnsafe) {
+                    const initData = window.Telegram.WebApp.initDataUnsafe;
+                    if (initData && initData.user) {
+                        // Try to get bot info if available
+                        botUsername = 'QuantumNexus_bot'; // Use the actual bot username
+                    }
+                }
+                const refLink = `https://t.me/${botUsername}?start=${data.referral_code || user?.id || 'no_code'}`;
                 document.getElementById('refLink').textContent = refLink;
             });
         }
