--- a/web_app.html
+++ b/web_app.html
@@ -1624,9 +1624,9 @@
                 document.getElementById('refCount').textContent = data.referrals_count || 0;
                 document.getElementById('refIncome').textContent = `${Math.floor(data.referral_income || 0)} 🪙`;
                 // Generate correct referral link using user's telegram_id as referral code
-                const botUsername = '@QuantumNexus_test_bot'; // Your actual bot username
+                const botUsername = 'Quanexus_bot'; // Bot username without @
                 const refCode = user?.id || data.referral_code || 'no_code'; // Use user.id (telegram_id)
-                const refLink = `https://t.me/${botUsername.replace('@','')}?start=${refCode}`;
+                const refLink = `https://t.me/${botUsername}?start=${refCode}`;
                 document.getElementById('refLink').textContent = refLink;
             });
         }
