Fix support window layout, add delete and archive ticket functions

--- a/web_app.html
+++ b/web_app.html
@@ -1829,13 +1829,8 @@
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 400px;">
                     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;">
-                        <div style="position:relative;text-align:center;flex:1;">
-                            <div style="font-size:48px;margin-bottom:10px;filter:drop-shadow(0 0 20px rgba(102,126,234,0.8));">💬</div>
-                            <h2 style="font-size:24px;font-weight:900;background:linear-gradient(135deg,#667eea,#764ba2);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-transform:uppercase;letter-spacing:2px;">Поддержка</h2>
-                        </div>
+                        <h2 style="font-size:20px;color:#fff;font-weight:700;">💬 Поддержка</h2>
                         <button onclick="document.getElementById('supportModal').remove()" style="background:rgba(255,255,255,0.1);border:1px solid rgba(255,255,255,0.3);border-radius:8px;width:32px;height:32px;color:#fff;cursor:pointer;font-size:18px;">✕</button>
-                    </div>
-                        <p style="font-size:12px;opacity:0.6;margin-top:8px;">Мы всегда готовы помочь вам</p>
                     </div>
                     
                     <div style="margin-bottom:20px;">
